--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "@vicons/ionicons5": "^0.13.0",
     "@vueuse/core": "^13.6.0",
+    "animejs": "^4.1.3",
     "naive-ui": "^2.42.0",
-    "reset-css": "^5.0.2",
     "sass": "^1.89.2",
+    "tailwindcss": "^4.1.12",
     "vue": "^3.5.17"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.12",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-vue": "~10.2.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
-    "postcss": "^8.5.6",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
