--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^4.1.3",
     "naive-ui": "^2.42.0",
     "sass": "^1.89.2",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.17"
   },
